5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1791_1622.log
== TEST (2019-05-29 15:23:30) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0 
while(i < size(vet1)):
	s = 75 - vet2[i]
	if(vet1[i] <= 75):
		onibus = onibus + vet1[i]
		i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:23:57) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0 
while(i < size(vet1)):
	s = 75 - vet2[i]
	if(vet1[i] <= 75):
		onibus = onibus + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:28) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 75
while(i < size(vet1)):
	s = onibus - vet2[i]
	if(vet1[i] <= 75):
		onibus = onibus + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:27:30) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 75
while(i < size(vet1)):
	s = onibus - vet2[i]
	if(s <= 75):
		onibus = vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:33) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 75
while(i < size(vet1)):
		s = onibus - vet2[i]
		onibus = vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 11
    i = i + 0
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:35) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 75
while(i < size(vet1)):
		s = onibus - vet2[i]
		onibus = vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 11
    i = i + 0
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:44) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 75
while(i < size(vet1)):
	s = onibus - vet2[i]
	onibus = vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:59) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 75
while(i < size(vet1)):
	s = onibus - vet2[i]
	onibus = vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:02) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 75
while(i < size(vet1)):
	s = onibus - vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:02) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 

while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = vet1[i] - vet2[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = vet1[i] - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:05) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 

while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = vet1[i] - vet2[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = vet1[i] - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:06) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 

while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = vet1[i] - vet2[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = vet1[i] - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:07) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 

while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = vet1[i] - vet2[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = vet1[i] - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:09) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 

while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = vet1[i] - vet2[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = vet1[i] - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:43:40) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = vet1[i] - vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = vet1[i] - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:43:42) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = vet1[i] - vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = vet1[i] - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:44:04) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s - vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:31) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = vet[i] 
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s - vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:08) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s - vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s - vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:17) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s + vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s + vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:18) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s + vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s + vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:19) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s + vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s + vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:19) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s + vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s + vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:19) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
	s = s + vet2[i]
	onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
File "XXXX", line 10
    s = s + vet2[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:56) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
		s = vet1[i] - vet2[i]
		onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:47:43) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
		s = s - vet2[i]
		onibus = s + vet1[i]
	i = i + 0

print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:49:07) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira a quant. de pessoas que entraram no onibus: \n")))
vet2 = array(eval(input("Insira a quant. de pessoas que sairam do onibus: \n")))

i = 0
s = 0 
onibus = 0
while(i < size(vet1)):
	if(vet1[i] <= 75):
		s = 75 - vet2[i]
		onibus = s + vet1[i]
	i = i + 0
print(onibus)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
